// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem with expenses 1`] = `
<div>
  <Link
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </Link>
  <p>
    195
     - 
    0
  </p>
</div>
`;

exports[`should render ExpenseListItem with expenses 2`] = `
<div>
  <Link
    to="/edit/2"
  >
    <h3>
      Rent
    </h3>
  </Link>
  <p>
    109500
     - 
    -345600000
  </p>
</div>
`;

exports[`should render ExpenseListItem with expenses 3`] = `
<div>
  <Link
    to="/edit/3"
  >
    <h3>
      Credit Card
    </h3>
  </Link>
  <p>
    4500
     - 
    345600000
  </p>
</div>
`;
